[gd_scene load_steps=11 format=3 uid="uid://biguv6isco6ni"]

[ext_resource type="Script" uid="uid://dundq666v0i2c" path="res://portal.gd" id="1_hh65y"]
[ext_resource type="Texture2D" uid="uid://bbuj6xtgjm3ln" path="res://assets/ui_assets/Dimensional_Portal.png" id="2_m3i5o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q34r3"]
atlas = ExtResource("2_m3i5o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0dgf"]
atlas = ExtResource("2_m3i5o")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d081"]
atlas = ExtResource("2_m3i5o")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18a4n"]
atlas = ExtResource("2_m3i5o")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei0qs"]
atlas = ExtResource("2_m3i5o")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs87x"]
atlas = ExtResource("2_m3i5o")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f1kbw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q34r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0dgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d081")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18a4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei0qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs87x")
}],
"loop": true,
"name": &"portal_animation",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tpiqr"]
radius = 4.95356
height = 10.5263

[node name="portal" type="Node2D"]
script = ExtResource("1_hh65y")

[node name="portal_animation" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_f1kbw")
animation = &"portal_animation"
frame_progress = 0.731168

[node name="Area2D" type="Area2D" parent="portal_animation"]
scale = Vector2(0.275, 0.448611)
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="portal_animation/Area2D"]
position = Vector2(1.72727, -1.90735e-06)
scale = Vector2(6, 6)
shape = SubResource("CapsuleShape2D_tpiqr")

[connection signal="body_entered" from="portal_animation/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="portal_animation/Area2D" to="." method="_on_area_2d_body_exited"]
